@@ -1,30 +1,32 @@
 package com.example.MangaLibrary.controllers;
+import com.example.MangaLibrary.helper.manga.ChapterForm;
 import com.example.MangaLibrary.helper.manga.MangaForm;
 import com.example.MangaLibrary.helper.MangaLibraryManager;
-import com.example.MangaLibrary.models.Genre;
-import com.example.MangaLibrary.models.Manga;
-import com.example.MangaLibrary.models.User;
-import com.example.MangaLibrary.repo.GenreRepo;
-import com.example.MangaLibrary.repo.MangaRepo;
-import com.example.MangaLibrary.repo.UserRepo;
+import com.example.MangaLibrary.models.*;
+import com.example.MangaLibrary.repo.*;
+import com.example.MangaLibrary.service.ChapterService;
+import com.example.MangaLibrary.service.MangaService;
+import com.example.MangaLibrary.service.UserService;
 import jakarta.validation.Valid;
+import org.apache.tomcat.util.http.fileupload.FileUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Sort;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.ui.ModelMap;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.io.File;
 import java.io.IOException;
+import java.security.Principal;
+import java.time.LocalDateTime;
 import java.time.Year;
 import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -37,18 +39,30 @@ public class MangaController {
     @Autowired
     private GenreRepo genreRepo;
     @Autowired
+    private UserSettingsRepo userSettingsRepo;
+    @Autowired
     private UserRepo userRepo;
+    @Autowired
+    private AuthorRepo authorRepo;
     @Autowired
     private MangaLibraryManager mangaLibraryManager;
     private static final int PAGE_SIZE = 6;
+    @Autowired
+    UserService userService;
+    @Autowired
+    MangaService mangaService;
+    @Autowired
+    ChapterService chapterService;
+    @Autowired
+    ChapterRepo chapterRepo;
     @GetMapping("/manga")
     public String mangas(
             @RequestParam(name = "page", defaultValue = "1", required = false) int page,
             Model model
     ) {
+
         Pageable pageable = PageRequest.of(page - 1, PAGE_SIZE, Sort.by("id").descending());
         Page<Manga> mangaPage = mangaRepo.findAll(pageable);
-
         List<Manga> mangaList = mangaPage.getContent();
         int totalPages = mangaPage.getTotalPages();
         if (page > totalPages) {
@@ -59,7 +73,6 @@ public class MangaController {
         return "manga/manga-main";
     }
 
-
     @GetMapping("/manga/add")
     public String mangaAdd(@ModelAttribute("mangaForm") @Valid MangaForm mangaForm, BindingResult result, Model model) {
         if (result.hasErrors()) {
@@ -68,231 +81,342 @@ public class MangaController {
         int maxYear = Year.now().getValue();
         model.addAttribute("maxYear", maxYear);
         List<Genre> genres = genreRepo.findAll();
-        model.addAttribute("genres", genres);
+        List<Author> authors = authorRepo.findAll();
 
+        model.addAttribute("authors", authors);
+        model.addAttribute("genres", genres);
         return "manga/manga-add";
     }
     @PostMapping("/manga/add")
-    public String addManga(@ModelAttribute("mangaForm") @Valid MangaForm mangaForm, BindingResult bindingResult,Model model) throws IOException {
-        List<Long> genreIds = mangaForm.getGenres().stream()
-                .map(Genre::getId)
-                .collect(Collectors.toList());
+    public String addManga(@ModelAttribute("mangaForm") @Valid MangaForm mangaForm, BindingResult bindingResult, Model model) throws IOException {
+        int maxYear = Year.now().getValue();
+        List<Genre> genres = genreRepo.findAll();
+        List<Author> authors = authorRepo.findAll();
 
-        MultipartFile posterImage = mangaForm.getMangaImage().getPosterImage();
-        long fileSizePosterInBytes = posterImage.getSize();
-        double fileSizePosterInMB = (double) fileSizePosterInBytes / (1024 * 1024);
+        model.addAttribute("maxYear", maxYear);
+        model.addAttribute("genres", genres);
+        model.addAttribute("authors", authors);
 
-        List<MultipartFile> pagesImg = mangaForm.getMangaImage().getPagesImage();
-        long fileSizePagesInBytes = 0;
-        if (pagesImg != null) {
-            for (MultipartFile pageImage : pagesImg) {
-                fileSizePagesInBytes += pageImage.getSize();
-            }
-        }
-        double fileSizePagesInMB = (double) fileSizePagesInBytes / (1024 * 1024);
-
-        if (bindingResult.hasErrors()
-                || (genreIds.isEmpty())
-                || (mangaForm.getMangaImage().getPosterImage().isEmpty())
-                || (mangaForm.getMangaImage().getPagesImage().isEmpty()
-                || (fileSizePosterInMB > 5)
-                || (fileSizePagesInMB > 10))) {
-            int maxYear = Year.now().getValue();
-            List<Genre> genres = genreRepo.findAll();
-            model.addAttribute("maxYear", maxYear);
-            model.addAttribute("genres", genres);
-
-            if (genreIds.isEmpty()) {
-                bindingResult.rejectValue("genres", "error.genres", "Будь ласка, оберіть хоча б один жанр.");
-            }
-
-            if (mangaForm.getMangaImage().getPosterImage().isEmpty()) {
-                bindingResult.rejectValue("mangaImage.posterImage", "error.missingFile", "Постер манги не був загруженний.");
-            }
-            if(fileSizePosterInMB > 5) {
-                bindingResult.rejectValue("mangaImage.posterImage", "error.fileSize", "Розмір завантажуваної картинки перевищує 5 МБ");
-            }
-            if(fileSizePagesInMB > 10) {
-                bindingResult.rejectValue("mangaImage.pagesImage", "error.fileSize", "Розмір завантажуванних картинок перевищує 10 МБ");
-            }
-            if (mangaForm.getMangaImage().getPagesImage() == null || mangaForm.getMangaImage().getPagesImage().stream().anyMatch(file -> file.getSize() == 0)) {
-                bindingResult.rejectValue("mangaImage.pagesImage", "error.missingFile", "Сторінки манги не були загружені.");
-            }
-
+        if (!mangaService.isValidAddMangaForm(mangaForm, bindingResult)) {
             return "manga/manga-add";
         }
-        Manga existingManga = mangaRepo.findByMangaName(mangaForm.getManga().getMangaName());
-        if (existingManga != null) {
-            bindingResult.rejectValue("manga.mangaName", "error.manga", "Манга з такою назвою вже існує");
+
+        try {
+            mangaService.saveManga(mangaForm);
+        } catch (IllegalArgumentException e) {
+            bindingResult.rejectValue("manga.mangaName", "error.manga", e.getMessage());
             return "manga/manga-add";
         }
-        Iterable<Genre> genreIterable = genreRepo.findAllById(genreIds);
-        List<Genre> selectedGenres = StreamSupport.stream(genreIterable.spliterator(), false)
-                .collect(Collectors.toList());
-        mangaForm.getManga().setGenres(selectedGenres);
 
-        String rootPath = mangaLibraryManager.getResourcePath();
-        String mangaFolderPath = mangaLibraryManager.createFolderForManga(mangaForm.getManga(), rootPath);
-        String posterPath = mangaLibraryManager.createPosterManga(mangaForm.getMangaImage().getPosterImage(), mangaForm.getManga(), mangaFolderPath);
-        mangaForm.getManga().setMangaPosterImg(posterPath);
-        List<String> pagesImages = mangaLibraryManager.createPagesManga(mangaForm.getMangaImage().getPagesImage(), mangaForm.getManga(), mangaFolderPath);
-        String pagesImagesAsString = String.join(",", pagesImages);
-        mangaForm.getManga().setMangaPages(pagesImagesAsString);
-
-        mangaRepo.save(mangaForm.getManga());
         return "redirect:/manga";
     }
+    @GetMapping("/manga/{mangaId}/chapter/add")
+    public String chapterAddGet(@PathVariable Long mangaId, ChapterForm chapterForm, Model model) {
+        Manga manga = mangaRepo.findById(mangaId)
+                .orElseThrow(() -> new IllegalArgumentException("Invalid manga Id: " + mangaId));
+        chapterForm.setManga(manga);
+        model.addAttribute("chapterForm", chapterForm);
+        model.addAttribute("mangaId", mangaId);
+        return "manga/manga-add-chapter";
+    }
 
-    @PostMapping("/manga/page/{mangaId}")
-    public String viewMangaPage(@PathVariable Long mangaId, Model model) {
-        Optional<Manga> mangaOptional = mangaRepo.findById(mangaId);
-        if (mangaOptional.isPresent()) {
-            Manga manga = mangaOptional.get();
-            String[] mangaPages = manga.getMangaPages().split(","); // Получаем список страниц манги
-            String mangaFolder = manga.getMangaName().replaceAll("\\s", "_").replaceAll("[^\\p{L}\\p{N}.\\-_]", "");
-
-            String[] mangaPagesWithFullPath = new String[mangaPages.length];
-
-            for (int i = 0; i < mangaPages.length; i++) {
-                mangaPagesWithFullPath[i] = "/images/mangas/" + mangaFolder + "/" + mangaPages[i];
-                manga.setMangaPages(mangaPagesWithFullPath[i]);
+    @PostMapping("/manga/{mangaId}/chapter/add")
+    public String chapterAddPost(@PathVariable Long mangaId,@Valid @ModelAttribute ChapterForm chapterForm,
+                                    BindingResult result,
+                                    RedirectAttributes redirectAttributes,
+                                    Model model) throws IOException {
+        if (!chapterService.isValidChapterForm(chapterForm,result)) {
+            model.addAttribute("mangaId", mangaId);
+            return "manga/manga-add-chapter";
+        }
+        Optional<Manga> thisManga = mangaRepo.findById(mangaId);
+        if(thisManga.isPresent()) {
+            Manga manga = thisManga.get();
+            boolean chapterExists = chapterRepo.existsByMangaIdAndTitle(mangaId, chapterForm.getChapter().getTitle());
+            if (chapterExists) {
+                result.rejectValue("chapter.title", "error.title", "Глава с таким названием уже существует");
+                model.addAttribute("mangaId", mangaId);
+                return "manga/manga-add-chapter";
             }
 
-            model.addAttribute("mangaPages", mangaPagesWithFullPath);
-            model.addAttribute("id", mangaId); // Передача id в модель
+            chapterService.addChapter(chapterForm, manga);
+            redirectAttributes.addFlashAttribute("message", "Chapter added successfully");
+        }
+        return "redirect:/manga/"+mangaId+"#chapters";
+    }
 
-            return "manga/manga-page";
+    @GetMapping("/manga/{mangaId}/chapter/{chapterId}")
+    public String viewChapter(@PathVariable Long mangaId, @PathVariable Long chapterId, Model model) {
+        Optional<Manga> mangaOptional = mangaRepo.findById(mangaId);
+        Optional<Chapter> chapterOptional = chapterRepo.findById(chapterId);
+
+        if (mangaOptional.isPresent() && chapterOptional.isPresent()) {
+            Manga manga = mangaOptional.get();
+            Chapter chapter = chapterOptional.get();
+            String mangaFolder = chapterService.cleanStringForUrl(manga.getMangaName());
+            String[] chapterImageFileNames = chapter.getChapterPages().split(",");
+
+            String[] chapterImageUrls = new String[chapterImageFileNames.length];
+            for (int i = 0; i < chapterImageFileNames.length; i++) {
+                chapterImageUrls[i] = String.format("/images/mangas/%s/chapters/%s/%s", mangaFolder, chapter.getTitle(), chapterImageFileNames[i]);
+            }
+
+            model.addAttribute("manga", manga);
+            model.addAttribute("chapter", chapter);
+            model.addAttribute("chapterImageUrls", chapterImageUrls);
+
+            return "manga/manga-chapter-view";
         } else {
-            model.addAttribute("errorMessage", "Такой манги не найдено!");
-            return "error";
+            model.addAttribute("errorMessage", "Такої манги або глави не знайдено!");
+            return "main/error";
         }
     }
+
+    @GetMapping("/manga/{mangaId}/chapter/edit/{chapterId}")
+    public String chapterEditGet(@PathVariable Long mangaId, @PathVariable Long chapterId, Model model) {
+        Optional<Manga> mangaOptional = mangaRepo.findById(mangaId);
+        Optional<Chapter> chapterOptional = chapterRepo.findById(chapterId);
+
+        if (mangaOptional.isPresent() && chapterOptional.isPresent()) {
+            Manga manga = mangaOptional.get();
+            Chapter chapter = chapterOptional.get();
+            String mangaFolder = chapterService.cleanStringForUrl(manga.getMangaName());
+            String[] chapterImageFileNames = chapter.getChapterPages().split(",");
+
+            String[] chapterImageUrls = new String[chapterImageFileNames.length];
+            for (int i = 0; i < chapterImageFileNames.length; i++) {
+                chapterImageUrls[i] = String.format("/images/mangas/%s/chapters/%s/%s", mangaFolder, chapter.getTitle(), chapterImageFileNames[i]);
+            }
+
+            ChapterForm chapterForm = new ChapterForm();
+            chapterForm.setManga(manga);
+            chapterForm.setChapter(chapter);
+            chapterForm.getChapterImage().setExistingImages(Arrays.asList(chapterImageUrls));
+
+            model.addAttribute("chapterForm", chapterForm);
+            model.addAttribute("manga", manga);
+            model.addAttribute("chapter", chapter);
+            model.addAttribute("chapterImageUrls", chapterImageUrls);
+            return "manga/manga-chapter-edit";
+        } else {
+            model.addAttribute("errorMessage", "Такої манги або глави не знайдено!");
+            return "main/error";
+        }
+    }
+
+    @PostMapping("/manga/{mangaId}/chapter/edit/{chapterId}")
+    public String chapterEditPost(@PathVariable Long mangaId, @PathVariable Long chapterId,
+                                  @Valid @ModelAttribute("chapterForm") ChapterForm chapterForm,
+                                  BindingResult result, RedirectAttributes redirectAttributes,
+                                  Model model) throws IOException {
+        Optional<Manga> mangaOptional = mangaRepo.findById(mangaId);
+        Optional<Chapter> chapterOptional = chapterRepo.findById(chapterId);
+
+        if (!mangaOptional.isPresent() || !chapterOptional.isPresent()) {
+            model.addAttribute("errorMessage", "Такой манги или главы не найдено!");
+            return "main/error";
+        }
+
+        Manga manga = mangaOptional.get();
+        Chapter chapter = chapterOptional.get();
+
+        if (!chapterService.isValidChapterForm(chapterForm, result)) {
+            addChapterDataToModel(model, manga, chapter, chapterForm);
+            return "manga/manga-chapter-edit";
+        }
+
+        boolean chapterExists = chapterRepo.existsByMangaIdAndTitleAndIdNot(mangaId, chapterForm.getChapter().getTitle(), chapterId);
+        if (chapterExists) {
+            result.rejectValue("chapter.title", "error.title", "Глава с таким названием уже существует");
+            addChapterDataToModel(model, manga, chapter, chapterForm);
+            return "manga/manga-chapter-edit";
+        }
+
+        try {
+            chapterService.editChapter(chapterForm, manga, chapter);
+            redirectAttributes.addFlashAttribute("message", "Глава успешно обновлена");
+        } catch (IOException e) {
+            model.addAttribute("errorMessage", "Ошибка при обновлении главы: " + e.getMessage());
+            return "main/error";
+        }
+
+        return "redirect:/manga/" + mangaId + "#chapters";
+    }
+
+    private void addChapterDataToModel(Model model, Manga manga, Chapter chapter, ChapterForm chapterForm) {
+        String mangaFolder = chapterService.cleanStringForUrl(manga.getMangaName());
+        String[] chapterImageFileNames = chapter.getChapterPages().split(",");
+        String[] chapterImageUrls = new String[chapterImageFileNames.length];
+        for (int i = 0; i < chapterImageFileNames.length; i++) {
+            chapterImageUrls[i] = String.format("/images/mangas/%s/chapters/%s/%s", mangaFolder, chapter.getTitle(), chapterImageFileNames[i]);
+        }
+
+        model.addAttribute("manga", manga);
+        model.addAttribute("chapter", chapter);
+        model.addAttribute("chapterImageUrls", chapterImageUrls);
+        model.addAttribute("chapterForm", chapterForm);
+    }
+
+
+    @PostMapping("/manga/{mangaId}/chapter/delete/{chapterId}")
+    public String deleteChapter(@PathVariable Long mangaId, @PathVariable Long chapterId, RedirectAttributes redirectAttributes) {
+        try {
+            chapterService.deleteChapter(mangaId, chapterId);
+            redirectAttributes.addFlashAttribute("message", "Глава успешно удалена");
+        } catch (Exception e) {
+            redirectAttributes.addFlashAttribute("errorMessage", "Ошибка удаления главы: " + e.getMessage());
+        }
+        return "redirect:/manga/" + mangaId + "#chapters";
+    }
+
     @GetMapping("/manga/{id}")
-    public String mangaDetails(@PathVariable(value = "id") long id, Model model) {
+    public String getManga(@PathVariable Long id, ModelMap model, Principal principal) {
         Optional<Manga> optionalManga = mangaRepo.findById(id);
         if (optionalManga.isPresent()) {
             Manga manga = optionalManga.get();
+            List<Chapter> chapters = chapterRepo.findByMangaId(manga.getId());
+
+            UserSettings userSettings = new UserSettings();
+            Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+            String username = authentication.getName();
+            User user = userRepo.findByUserName(username);
+
+            userSettings = userSettingsRepo.findByUser(user);
+
+            String translatedStatus = mangaService.getMangaTranslatedStatus(manga.getMangaStatus());
+
+            MangaService.addMangaStatusAttributes(user, id, model);
+
             model.addAttribute("manga", manga);
+            model.addAttribute("translatedMangaStatus", translatedStatus);
+            model.addAttribute("userSettings", userSettings);
+            model.addAttribute("chapters", chapters);
             return "manga/manga-details";
         } else {
-            model.addAttribute("errorMessage", "Такой манги не найдено!");
-            return "error";
+            model.addAttribute("errorMessage", "Такої манги не знайдено!");
+            return "main/error";
         }
     }
+    @PostMapping("/manga/add-to-list")
+    @ResponseBody
+    public ResponseEntity<Map<String, Object>> addMangaToList(@RequestParam("listType") String listType,
+                                                                @RequestParam("mangaId") Long mangaId) {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        String username = authentication.getName();
+        User user = userRepo.findByUserName(username);
+        Map<String, Object> response = new HashMap<>();
 
+        if(user != null) {
+            userService.deleteMangaFromUserList(user, mangaId);
+            userService.addMangaToList(user, listType, mangaId);
+            userRepo.save(user);
+            response.put("success", true);
+            response.put("message", "Манга успішно додана у список");
+        } else {
+            response.put("success", false);
+            response.put("message", "Користувач не знайдений");
+        }
+
+        return ResponseEntity.ok(response);
+    }
     @PostMapping("/manga/delete/{id}")
     public String MangaPostDelete(@PathVariable(value ="id") long id,Model model) {
         Manga mangaToDelete = mangaRepo.findById(id).orElseThrow(() -> new IllegalArgumentException("Invalid Id:" + id));
         mangaRepo.delete(mangaToDelete);
 
         String mangaName = mangaToDelete.getMangaName().replaceAll("\\s", "_").replaceAll("[^\\p{L}\\p{N}.\\-_]", "");
-
-        String rootPath = mangaLibraryManager.getResourcePath();
-        File sourceFolder = new File(rootPath + File.separator + mangaName);
-        if (sourceFolder.exists()) {
-            mangaLibraryManager.deleteFolder(sourceFolder);
-        }
-
-        String targetRootPath = mangaLibraryManager.getTargetPath();
-        File targetFolder = new File(targetRootPath + File.separator + mangaName);
-        if (targetFolder.exists()) {
-            mangaLibraryManager.deleteFolder(targetFolder);
-        }
+        mangaService.deleteFolder(mangaName);
 
         Iterable<User> usersIterable = userRepo.findAll();
         List<User> users = new ArrayList<>();
         usersIterable.forEach(users::add);
 
-        for (User user : users) {
-            if (user.getMangaReading().contains(String.valueOf(id))) {
-                user.getMangaReading().remove(String.valueOf(id));
-            }
-            if (user.getMangaWantToRead().contains(String.valueOf(id))) {
-                user.getMangaWantToRead().remove(String.valueOf(id));
-            }
-            if (user.getMangaStoppedReading().contains(String.valueOf(id))) {
-                user.getMangaStoppedReading().remove(String.valueOf(id));
-            }
-            if (user.getMangaRecited().contains(String.valueOf(id))) {
-                user.getMangaRecited().remove(String.valueOf(id));
-            }
-            userRepo.save(user);
-        }
+        userService.deleteMangaFromUsersList(users, id);
         return "redirect:/manga";
     }
+
     @GetMapping("/manga/edit/{id}")
     public String mangaEdit(@PathVariable("id") long id, Model model) {
 
         Optional<Manga> optionalManga = mangaRepo.findById(id);
         int maxYear = Year.now().getValue();
         List<Genre> genres = genreRepo.findAll();
+        List<Author> authors = authorRepo.findAll();
+
+
         if (optionalManga.isPresent()) {
             Manga manga = optionalManga.get();
             MangaForm mangaForm = new MangaForm();
             mangaForm.setManga(manga);
 
-            model.addAttribute("mangaDescription",manga.getMangaDescription() );
-            model.addAttribute("mangaReleaseYear", manga.getReleaseYear());
-            model.addAttribute("mangaAuthor", manga.getMangaAuthor());
-            model.addAttribute("oldGenres", manga.getGenres());
+            model.addAttribute("manga", manga);
             model.addAttribute("maxYear", maxYear);
             model.addAttribute("genres", genres);
-            model.addAttribute("mangaForm", mangaForm); // Передаем объект MangaForm в модель
+            model.addAttribute("authors", authors);
+            model.addAttribute("mangaForm", mangaForm);
             return "manga/manga-edit";
         } else {
             return "redirect:/manga";
         }
     }
-
     @PostMapping("/manga/edit/{id}")
-    public String mangaPostUpdate(@PathVariable("id") long id, @ModelAttribute("mangaForm") @Valid MangaForm mangaForm,
+    public String mangaPostUpdate(@PathVariable("id") long id,
+                                    @ModelAttribute("mangaForm") @Valid MangaForm mangaForm,
                                     BindingResult bindingResult, Model model) {
         List<Long> genreIds = mangaForm.getManga().getGenres().stream()
                 .map(Genre::getId)
-                .collect(Collectors.toList());
-        if(    ((mangaForm.getManga().getMangaDescription().isEmpty()) ||
-                mangaForm.getManga().getMangaDescription().length() < 10 || mangaForm.getManga().getMangaDescription().length() > 2048)
-                ||
-                ((mangaForm.getManga().getMangaAuthor().isEmpty())||
-                mangaForm.getManga().getMangaAuthor().length() < 5 || mangaForm.getManga().getMangaAuthor().length() > 256)
-                ||
-                mangaForm.getManga().getReleaseYear().isEmpty()
-                ||
-                (genreIds.isEmpty())) {
+                .toList();
 
+        if(!mangaService.isValidUpdateMangaForm(mangaForm, bindingResult)) {
             int maxYear = Year.now().getValue();
             List<Genre> genres = genreRepo.findAll();
+            List<Author> authors = authorRepo.findAll();
+
             model.addAttribute("id", id);
+            model.addAttribute("manga", mangaForm.getManga());
             model.addAttribute("maxYear", maxYear);
             model.addAttribute("genres", genres);
+            model.addAttribute("authors", authors);
             model.addAttribute("mangaForm", mangaForm);
             if (genreIds.isEmpty()) {
                 bindingResult.rejectValue("genres", "error.genres", "Будь ласка, оберіть хоча б один жанр.");
             }
             return "manga/manga-edit";
         }
-
-        Manga mangaToUpdate = mangaRepo.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Invalid manga Id:" + id));
-
-        mangaToUpdate.setMangaDescription(mangaForm.getManga().getMangaDescription());
-        mangaToUpdate.setReleaseYear(mangaForm.getManga().getReleaseYear());
-        mangaToUpdate.setMangaAuthor(mangaForm.getManga().getMangaAuthor());
-        mangaToUpdate.setGenres(mangaForm.getManga().getGenres());
-
-        mangaRepo.save(mangaToUpdate);
-        return "redirect:/manga";
+        mangaService.updateManga(id,mangaForm);
+        return "redirect:/manga/"+id;
     }
-    @GetMapping("/search")
-    public String postSearch(@RequestParam("q") String searchQuery,
-                             @RequestParam(value = "page", required = false, defaultValue = "1") int page,
-                             Model model) {
+        @GetMapping("/search")
+    public String search(@RequestParam("q") String searchQuery,
+                            @RequestParam("type") String searchType,
+                            @RequestParam(value = "page", required = false, defaultValue = "1") int page,
+                            Model model) {
         if (!searchQuery.isEmpty()) {
-            Page<Manga> foundMangas = mangaRepo.findByMangaNameContainingIgnoreCase(searchQuery, PageRequest.of(page - 1,PAGE_SIZE, Sort.by("id").descending()));
+            Page<Manga> foundMangas;
+            switch (searchType) {
+                case "title":
+                    foundMangas = mangaRepo.findByMangaNameContainingIgnoreCase(searchQuery, PageRequest.of(page - 1, PAGE_SIZE, Sort.by("id").descending()));
+                    break;
+                case "genre":
+                    Genre genre = genreRepo.findByGenreName(searchQuery);
+                    foundMangas = mangaRepo.findByGenresGenreNameContainingIgnoreCase(searchQuery, PageRequest.of(page - 1, PAGE_SIZE, Sort.by("id").descending()));
+                    model.addAttribute("genreId", genre.getId());
+                    break;
+                case "releaseYear":
+                    foundMangas = mangaRepo.findByReleaseYear(searchQuery, PageRequest.of(page - 1, PAGE_SIZE, Sort.by("id").descending()));
+                    break;
+                case "mangaStatus":
+                    foundMangas = mangaRepo.findByMangaStatusContainingIgnoreCase(searchQuery, PageRequest.of(page - 1, PAGE_SIZE, Sort.by("id").descending()));
+                    break;
+                default:
+                    model.addAttribute("errorMessage", "Немає такого типу пошуку!");
+                    return "main/error";
+            }
             List<Manga> mangaList = foundMangas.getContent();
             if (mangaList.isEmpty()) {
                 model.addAttribute("noResults", true);
                 model.addAttribute("searchQuery", searchQuery);
+
             } else {
                 model.addAttribute("noResults", false);
                 model.addAttribute("mangas", mangaList);
@@ -300,72 +424,16 @@ public class MangaController {
                 model.addAttribute("totalPages", foundMangas.getTotalPages());
                 model.addAttribute("searchQuery", searchQuery);
             }
-
-            return "manga/manga-search";
+            model.addAttribute("searchType", searchType);
+            return "manga/manga-search-result";
         }
         return "redirect:/manga";
-    }
-    @GetMapping("/manga/reading/{id}")
-    public String addMangaToReadingList(@PathVariable Long id, Model model, RedirectAttributes redirectAttributes) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
-        User user = userRepo.findByUserName(username);
-
-        mangaLibraryManager.removeMangaFromOtherLists(user, id);
-
-        user.getMangaReading().add(String.valueOf(id));
-        userRepo.save(user);
-        redirectAttributes.addFlashAttribute("notificationMessage", "Манга добавлена в список 'Читаю'");
-
-        return "redirect:/manga/" + id;
-    }
-    @GetMapping("/manga/want-read/{id}")
-    public String addMangaToWantReadList(@PathVariable Long id, RedirectAttributes redirectAttributes) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
-        User user = userRepo.findByUserName(username);
-
-        mangaLibraryManager.removeMangaFromOtherLists(user, id);
-
-        user.getMangaWantToRead().add(String.valueOf(id));
-        userRepo.save(user);
-        redirectAttributes.addFlashAttribute("notificationMessage", "Манга добавлена в список 'Буду читать'");
-
-        return "redirect:/manga/" + id;
-    }
-
-    @GetMapping("/manga/recited/{id}")
-    public String addMangaToRecitedList(@PathVariable Long id, RedirectAttributes redirectAttributes) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
-        User user = userRepo.findByUserName(username);
-
-        mangaLibraryManager.removeMangaFromOtherLists(user, id);
-
-        user.getMangaRecited().add(String.valueOf(id));
-        userRepo.save(user);
-        redirectAttributes.addFlashAttribute("notificationMessage", "Манга добавлена в список 'Прочитал'");
-
-        return "redirect:/manga/" + id;    }
-
-    @GetMapping("/manga/read-stopped/{id}")
-    public String addMangaToReadStoppedList(@PathVariable Long id, RedirectAttributes redirectAttributes) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
-        User user = userRepo.findByUserName(username);
-
-        mangaLibraryManager.removeMangaFromOtherLists(user, id);
-        user.getMangaStoppedReading().add(String.valueOf(id));
-        userRepo.save(user);
-        redirectAttributes.addFlashAttribute("notificationMessage", "Манга добавлена в список 'Бросил'");
-
-        return "redirect:/manga/" + id;
     }
 
     @GetMapping("/random")
     public String getRandomMangaId(Model model) {
 
-        Long randomMangaId = mangaLibraryManager.getRandomMangaId();
+        Long randomMangaId = mangaService.getRandomMangaId();
 
         model.addAttribute("randomMangaId", randomMangaId);
         if(randomMangaId==null) {
